# scrramble

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  ternary_neuron_network_gpt.py  ternary_stochastic_neuron.ipynb  ternary_stochastic_nn.py  trident_v1.ipynb
ActivationFunctions/: BinarySTE.py
Architectures/: MLP.py  PseudoMLP.py  partial_sums_training.py  run_pseudomlp.py  run_weight_sharing_analysis.py  scrramble_baselines.py  scrramble_capnet_mnist.py  scrramble_caps_net_mnist.py  scrramble_caps_net_mnist_v2.py  scrramble_capsnet_with_recon_mnist.py  scrramble_cifar10.py  scrramble_mnist.ipynb  scrramble_mnist_code.py  scrramble_self_attention.ipynb
Docs/: NN1_EPIC_AI_SImulator.xlsx  NN2_EPIC_AI_SImulator.xlsx  trident_outline.md
EPIC-EIC/: Accumulator.py  EICDense.py  EICLinear.py  EICNet.py  EICNetwork.py  PermuteBlock.py  PseudoFFNet.py  ShuffleBlocks.py  binary_ste.py  blocks_verification.ipynb  changing_accumulator.ipynb  chip_metrics_functions.py  clean_eic_conv_net.ipynb  consolidate_eic_blocks_nnx.ipynb  eic_conv_net.ipynb  eic_nnx_training.py  silu-network.ipynb  silu_blocks.ipynb  testing_epic_eic.ipynb  training_pipeline.py
Notebooks/: bayesian_hyperparameter_tuning_cifar10.py  binary_trident_helper_functions.py  core_architecture_notebook.ipynb  corewise_self_attention_test.ipynb  epic_ai_architecture_v1.py  epic_ai_architecture_v2.py  partial_sums_notebook.ipynb  plotting_scrramble_analysis.ipynb  quantized_activations_with_ste.ipynb  scrramble_cifar10_conv_caps.ipynb  scrramble_cifar10_pilot.py  scrramble_cifar_mlpmix_nb.ipynb  scrramble_mnist_augmented.ipynb  scrramble_mnist_capsnet_testing.py  scrramble_mnist_recon.ipynb  scrramble_self_attention.ipynb  ternary_stochastic_neuron_OLD.ipynb  test_conv_net.ipynb  test_mahowald.ipynb  test_margin_loss.py  test_margin_loss_claude.py  toy_models_of_connectivity.ipynb  trident_explanatory_figures.ipynb  trident_v1.ipynb  trident_v2.ipynb
Plotting/: mnist_neuron_wise_baseline.py  test_reshape.py
Ramblings/: RRAM_fitting.ipynb  RRAM_learning.ipynb  bayes_network.ipynb  consolidation.ipynb  consolidation_hopfield.ipynb  napkin_math.ipynb  (+2 more)
(+81 files in other folders)
