[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrramble"
version = "0.1.0"
description = "Package for ScRRAMBLe: Block-sparse neural network architecture for analog in memory computing accelerators"
authors = [{ name = "Vikrant Jaltare", email = "vjaltare@ucsd.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/models"]
