[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrramble"
version = "0.1.0"
description = "Package for ScRRAMBLe: Block-sparse neural network architecture for analog in memory computing accelerators"
authors = [{ name = "Vikrant Jaltare", email = "vjaltare@ucsd.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Machine Learning & Data Science
    "tensorflow>=2.20.0",
    "tensorflow-datasets",
    "tensorboard",
    "keras",
    "jax>=0.8.1",
    "jaxlib>=0.8.1",
    "flax>0.12.1",
    "optax",
    "optree",
    "chex",
    "orbax-checkpoint",
    "scikit-learn",
    "numpy",
    "scipy",
    "pandas",
    
    # Visualization & UI
    "matplotlib",
    "seaborn",
    "pyside6",
    "pillow",
    "rich",
    
    # Utilities & Data handling
    "absl-py",
    "einops",
    "tqdm",
    "h5py",
    "pyarrow",
    "pyyaml",
    "simple-parsing",
    "joblib",
    "statsmodels",
    "fsspec",
    "tensorstore",
    "treescope",
    
    # NVIDIA/CUDA specific (Usually handled by JAX/TF, but included for exact environment parity)
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvcc-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvshmem-cu12",
    "jax-cuda12-pjrt",
    "jax-cuda12-plugin"
]

[tool.hatch.build.targets.wheel]
packages = ["src/models"]
